--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,7 @@
 :uri-catch: https://github.com/catchorg/Catch2
 :uri-dpkg: https://packages.qa.debian.org/dpkg
 :uri-rpm-build: http://www.rpm.org
+:uri-curl: https://curl.haxx.se/
 
 *{project}* is a C++ wrapper for the Mastodon API. It replaces
  link:{uri-mastodon-cpp}[mastodon-cpp].
@@ -40,6 +41,7 @@ Have a look at the link:{uri-reference}[reference].
 * Tested OS: Linux
 * C++ compiler (tested: link:{uri-gcc}[GCC] 7/8/9)
 * link:{uri-cmake}[CMake] (at least: 3.9)
+* link:{uri-curl}[curl] (tested: 7.66 / 7.58)
 * Optional
   ** Documentation: link:{uri-doxygen}[Doxygen] (tested: 1.8)
   ** Tests: link:{uri-catch}[Catch] (tested: 2.5 / 1.2)
