CI: Test with clang.

--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,7 @@
 :uri-mastodon-cpp: https://schlomp.space/tastytea/mastodon-cpp
 :uri-reference: https://doc.schlomp.space/{project}/
 :uri-gcc: https://gcc.gnu.org/
+:uti-clang: https://clang.llvm.org/
 :uri-cmake: https://cmake.org/
 :uri-doxygen: http://www.doxygen.nl/
 :uri-catch: https://github.com/catchorg/Catch2
@@ -39,7 +40,7 @@ Have a look at the link:{uri-reference}[reference].
 ==== Dependencies
 
 * Tested OS: Linux
-* C++ compiler (tested: link:{uri-gcc}[GCC] 7/8/9)
+* C++ compiler (tested: link:{uri-gcc}[GCC] 7/8/9, link:{uri-lang}[clang] 6/7)
 * link:{uri-cmake}[CMake] (at least: 3.9)
 * link:{uri-curl}[curl] (tested: 7.66 / 7.58)
 * Optional
