--- a/README.adoc
+++ b/README.adoc
@@ -75,15 +75,36 @@ link:{uri-reference}/examples.html[More examples] are included in the reference.
 
 == Install
 
-// === Gentoo
+=== Gentoo
 
-// [source,shell]
-// --------------------------------------------------------------------------------
-// eselect repository enable tastytea
-// echo 'dev-cpp/mastodonpp' >> /etc/portage/package.accept_keywords/mastodonpp
-// emaint sync -r tastytea
-// emerge -a dev-cpp/mastodonpp
-// --------------------------------------------------------------------------------
+[source,shell]
+--------------------------------------------------------------------------------
+eselect repository enable tastytea
+echo 'dev-cpp/mastodonpp' >> /etc/portage/package.accept_keywords/mastodonpp
+emaint sync -r tastytea
+emerge -a dev-cpp/mastodonpp
+--------------------------------------------------------------------------------
+
+=== Debian and Ubuntu
+
+We automatically generate packages for Debian buster (10) and Ubuntu bionic
+(18.04), but only for x86_64 (amd64). Download the them at
+link:{uri-base}/releases[schlomp.space].
+
+[source,shell]
+--------------------------------------------------------------------------------
+apt install ./libmastodonpp*.deb
+--------------------------------------------------------------------------------
+
+=== CentOS
+
+We automatically generate packages for CentOS 8, but only for x86_64
+(amd64). Download the them at link:{uri-base}/releases[schlomp.space].
+
+[source,shell]
+--------------------------------------------------------------------------------
+yum install ./libmastodonpp*.rpm
+--------------------------------------------------------------------------------
 
 === From source
 
