--- a/README.adoc
+++ b/README.adoc
@@ -53,7 +53,7 @@ Have a look at the link:{uri-reference}[reference].
 
 int main()
 {
-    mastodonpp::Instance instance{"example.com", {}};
+    mastodonpp::Instance instance{"example.com", "123AccessToken123"};
     mastodonpp::Connection connection{instance};
 
     const mastodonpp::parametermap parameters
