--- a/README.adoc
+++ b/README.adoc
@@ -58,7 +58,7 @@ int main()
 
     const mastodonpp::parametermap parameters
         {
-            {"status", "How is the wheather?"},
+            {"status", "How is the weather?"},
             {"poll[options]", vector<string_view>{"Nice", "not nice"}},
             {"poll[expires_in]", "86400"}
         };
