add maintenance mode notice

--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,10 @@
 link:{uri-pleroma}[Pleroma] APIs. It replaces
 link:{uri-mastodon-cpp}[mastodon-cpp].
 
+[IMPORTANT]
+mastodonpp is in maintenance mode. I will continue to fix bugs, but won't add
+new features. If you'd like to adopt this project, please get in touch.
+
 We aim to create a library that is comfortable, yet minimal. All API endpoints
 from Mastodon and Pleroma are stored in ``enum class``es, to counteract typos
 and make your life easier. The network-facing code is built on
